# computational-electromagnetics

./: README.md  pyproject.toml  requirements.txt
computational_electromagnetics/: advanced_concepts_AI.ipynb  aux1_boundary_conditions.ipynb  aux2_large_linear_systems.ipynb  aux3_krylov_methods.ipynb  ch2_convergence.ipynb  ch3_3_1_finite_diff.ipynb  ch3_3_2_finite_diff_complex_exp.ipynb  ch3_3_3_finite_diff_matrixform.ipynb  ch3_finite_diff.ipynb  ch4_eigenvals.ipynb  ch4_finite_diff_time_domain.ipynb  ch5_finite_diff_time_domain.ipynb  ch6_finite_element_method.ipynb  final_project.ipynb
docs/: 1_maxwells_equations.md  2_boundary_conditions.md
